--- a/GST_Impl/bin/GST_Impl.dll.config
+++ b/GST_Impl/bin/GST_Impl.dll.config
@@ -9,12 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=ANAND\MSSQLSERVER14;Initial Catalog=GSTBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=ANAND\MSSQLSERVER14;Initial Catalog=GSTBook;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="GSTBookEntities" connectionString="metadata=res://*/Models.GSTModel.csdl|res://*/Models.GSTModel.ssdl|res://*/Models.GSTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANAND\MSSQLSERVER14;initial catalog=GSTBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=192.168.0.50;initial catalog=GSTBook;integrated security=True;user Id = sa;password=123;" providerName="System.Data.SqlClient" />
-    <add name="GSTBookEntities" connectionString="metadata=res://*/Models.GSTModel.csdl|res://*/Models.GSTModel.ssdl|res://*/Models.GSTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.50;initial catalog=GSTBook;integrated security=True;user Id = sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    
-  <add name="GSTBookEntities" connectionString="metadata=res://*/Models.GSTModel.csdl|res://*/Models.GSTModel.ssdl|res://*/Models.GSTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANAND\MSSQLSERVER14;initial catalog=GSTBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=192.168.0.50;initial catalog=GSTBook;integrated security=True;user Id = sa;password=123;" providerName="System.Data.SqlClient" />
+    <add name="GSTBookEntities" connectionString="metadata=res://*/Models.GSTModel.csdl|res://*/Models.GSTModel.ssdl|res://*/Models.GSTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.50;initial catalog=GSTBook;integrated security=True;user Id = sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <!--<add name="GSTBookEntities" connectionString="metadata=res://*/Models.GSTModel.csdl|res://*/Models.GSTModel.ssdl|res://*/Models.GSTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANAND\MSSQLSERVER14;initial catalog=GSTBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
